Deployment/dev/k8sClusterDepAWSKOPS/modules/istio/ingress_kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: istio-kiali-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: 'kiali.hn.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001                             

# /hn-ms1               -->  /
# /hn-ms1/muf           -->  /muf
